buildscript {
    ext {
        springBootVersion = '3.1.1'
        springVersion = '6.0.11'
        jacksonVersion = '2.15.2'
        mockitoVersion = '5.2.+'
        retrofitVersion = '2.9.0'
    }
    dependencies {
        classpath 'org.owasp:dependency-check-gradle:6.5.3'
    }
}

plugins {
    id 'java'
    id "org.owasp.dependencycheck" version "6.5.3"
    id "io.freefair.lombok" version "8.3"
}

group 'ee.bitweb'
version '3.0.0'
sourceCompatibility = JavaVersion.VERSION_17

apply from: "test.gradle"
apply from: "library.gradle"
apply from: "sonarqube.gradle"

repositories {
    mavenCentral()
    maven {
        url "https://nexus.bitweb.ee/repository/maven-public/"
    }
}

dependencies {
    // https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-catalina
    compileOnly group: 'org.apache.tomcat', name: 'tomcat-catalina', version: '10.1.13'

    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
    compileOnly group: 'org.springframework', name: 'spring-webmvc', version: "${springVersion}"

    // https://mvnrepository.com/artifact/org.springframework/spring-tx
    compileOnly group: 'org.springframework', name: 'spring-tx', version: "${springVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
    compileOnly group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.amqp/spring-amqp
    compileOnly group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor
    annotationProcessor  group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
    compileOnly group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-autoconfigure
    compileOnly group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
    compileOnly group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310
    compileOnly group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "${jacksonVersion}"

    // https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api
    compileOnly group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.0.2'

    // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
    compileOnly group: 'com.squareup.retrofit2', name: 'retrofit', version: "${retrofitVersion}"

    // https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-jackson
    compileOnly group: 'com.squareup.retrofit2', name: 'converter-jackson', version: "${retrofitVersion}"

    // https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor
    compileOnly group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '4.11.0'

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.springframework.amqp/spring-amqp
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: "${springBootVersion}"

    // https://mvnrepository.com/artifact/org.json/json
    testImplementation group: 'org.json', name: 'json', version: '20230227'

    // https://bitbucket.org/bitwebou/java-core-test-lib/src/master/
    testImplementation group: 'ee.bitweb', name: 'test-core-lib', version: '1.+'

    // https://mvnrepository.com/artifact/org.mockito/mockito-inline
    testImplementation group: 'org.mockito', name: 'mockito-inline', version: "${mockitoVersion}"

    // https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: "${mockitoVersion}"

    // https://mvnrepository.com/artifact/org.mock-server/mockserver-netty
    testImplementation ("org.mock-server:mockserver-netty:5.14.0") {
        exclude group: 'junit', module: 'junit'
    }

    testImplementation group : 'org.testcontainers', name: 'testcontainers',  version: "1.+"
}

configurations {
    testImplementation.extendsFrom compileOnly
}
